# C-VIN-Decoder

./: .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  README.md  build_and_test.sh
include/: Decoder.h  Resources.h  VinDecoder.h
resources/: countries.txt  manufacturers.txt
src/: Decoder.cpp  Decoder.h  VinDecoder.cpp  testly.cpp
tests/: CMakeLists.txt  VinDecoderTest.cpp
